--- a/lab 2/task.ipynb
+++ b/lab 2/task.ipynb
@@ -916,7 +916,7 @@
    "source": [
     "import sklearn\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
-    "columns=df.columns #label не використовую, він не типу int або float\r\n",
+    "columns=df.columns\r\n",
     "columns=columns[:9]\r\n",
     "X=df[['Overall', 'Attack', 'Midfield', 'Defence', 'TransferBudget', 'DomesticPrestige', 'IntPrestige', 'Players', 'StartingAverageAge']]\r\n",
     "\r\n",
