--- a/lab 4/lab4.ipynb
+++ b/lab 4/lab4.ipynb
@@ -423,7 +423,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Графічний аналіз за допомогою Matplotlib."
+    "### Графічний аналіз наборів даних за допомогою Matplotlib"
    ],
    "metadata": {}
   },
